# Christophoer

./: .gitignore  .pyproject.toml.swp  pyproject.toml
output/data_scientist/: database.csv  url_dict.json
output/data_scientist/json/: file_0.json  file_1.json  file_10.json  file_100.json  file_101.json  file_102.json  file_103.json  file_104.json  file_105.json  file_106.json  file_107.json  file_108.json  file_109.json  file_11.json  file_110.json  file_113.json  file_115.json  file_116.json  file_117.json  file_118.json  file_119.json  file_12.json  file_120.json  file_121.json  file_122.json  file_123.json  file_124.json  file_125.json  file_126.json  file_127.json  file_128.json  file_129.json  file_13.json  file_130.json  file_131.json  file_132.json  file_133.json  file_134.json  file_135.json  file_136.json  (+832 more)
output/data_scientist/txt/: file_1.txt  file_10.txt  file_100.txt  file_102.txt  file_103.txt  file_105.txt  file_106.txt  file_108.txt  file_109.txt  file_11.txt  file_110.txt  file_113.txt  file_115.txt  file_116.txt  file_117.txt  file_119.txt  file_120.txt  file_121.txt  file_122.txt  file_124.txt  file_125.txt  file_126.txt  file_129.txt  file_13.txt  file_131.txt  file_132.txt  file_133.txt  file_134.txt  file_135.txt  file_137.txt  file_138.txt  file_14.txt  file_142.txt  file_143.txt  file_145.txt  file_147.txt  file_15.txt  file_150.txt  file_151.txt  file_152.txt  (+735 more)
output/sample/: url_dict.json
output/sample/json/: file_0.json  file_1.json  file_10.json  file_100.json  file_101.json  file_102.json  (+290 more)
src/linkedin/: desktop.ipynb  main.py
(+278 files in other folders)
