[tool.poetry]
name = "linkedin"
version = "0.1.0"
description = ""
authors = ["Utashi Fujimoto <frusciante2580@gmail.com>"]
readme = "README.md"
packages = [{include = "linkedin", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.4.3"
bs4 = "^0.0.1"
ipykernel = "^6.15.3"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
